kubernetes/applications/grafana-instance/base/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: grafana
  namespace: grafana-instance
  annotations:
    # ExternalDNS configuration for Cloudflare
    external-dns.alpha.kubernetes.io/target: udm-pro.zimmermann.sh
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`PLACEHOLDER`)
      priority: 10
      middlewares:
        - name: chain-mfa-auth
          namespace: ingress-controller
      services:
        - kind: Service
          name: grafana
          port: 80
  tls:
    secretName: grafana-tls-cert
